trying to use sass

--- a/nft-preview-card/src/App.scss
+++ b/nft-preview-card/src/App.scss
@@ -1,7 +1,7 @@
 $background-color: #282c34;
 
 //dark colorscheme
-$d-primary-blue: hsl(215, 51%, 70%); // Soft blue
+$d-primary-blue: hsl(215, 51%, 70%);
 $d-primary-cyan: hsl(178, 100%, 50%);
 
 $dn-blue-bg: hsl(217, 54%, 11%);
